Major fixes and improvements for v1.0.2.2-HotFix - Fixed console command registration: Commands now properly work from console - Fixed CommandLengthEnforcer to only apply to players, not console/mods - Improved debug logging enforcement across all systems - Fixed kit system message formatting (removed {0} placeholder issues) - Fixed home/warp message formatting - Improved LuckPerms integration and permission node recognition - Updated permission registry with proper node validation - Fixed ItemInteractionHandler IllegalAccessError for Minecraft 1.21.5 - Enhanced AFK detection system with better movement/rotation tracking - Added player data migration system for better data management - Implemented individual player data files (playerdata/<uuid>.json) - Added CommandSourceHelper utility for consistent player source handling - Added DebugLogger utility for centralized debug logging - Added PermissionValidator for permission node validation - Fixed placeholder expansion version display - Updated documentation for permission nodes - Added JetBrains IDE run configurations (Build Server JAR, Clean Build) - Added BUILD_GUIDE.md documentation - Improved config reload functionality - Enhanced permission system with dynamic permission limits - General code cleanup and bug fixes Build: 536+